--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
                 this.filteredFoods = [];
                 this.categories = new Set();
                 this.selectedFood = null;
-                this.API_URL = "http://localhost:1234/foods";
+                this.API_URL = "https://my-calories-nu.vercel.app/foods";
                 
                 // DOM Elements
                 this.domElements = {
