--- a/profile.html
+++ b/profile.html
@@ -608,7 +608,7 @@
             const token = localStorage.getItem('nutritrack_token');
             if (!token) {
                 console.warn('No token found, redirecting to login.');
-                window.location.href = '/login.html';
+                window.location.href = '/index.html';
                 return;
             }
 
@@ -624,7 +624,7 @@
                 if (response.status === 401) {
                     console.warn('Unauthorized request, token might be expired. Redirecting to login.');
                     localStorage.removeItem('nutritrack_token');
-                    window.location.href = '/login.html';
+                    window.location.href = '/index.html';
                     return;
                 }
 
