--- a/index.html
+++ b/index.html
@@ -7,211 +7,235 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --primary-color: #00C853;
-            --primary-light: #5EFC82;
-            --primary-dark: #009624;
-            --secondary-color: #FF6D00;
-            --secondary-light: #FF9E40;
-            --accent-color: #2962FF;
-            --light-color: #F5F5F6;
-            --dark-color: #263238;
-            --text-color: #37474F;
-            --text-light: #78909C;
-            --card-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
-            --transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-            --success-color: #00C853;
-            --warning-color: #FFAB00;
-            --danger-color: #FF5252;
-        }
+    --primary-color: #00C853;
+    --primary-light: #5EFC82;
+    --primary-dark: #009624;
+    --secondary-color: #FF6D00;
+    --secondary-light: #FF9E40;
+    --accent-color: #2962FF;
+    --light-color: #F5F5F6;
+    --dark-color: #263238;
+    --text-color: #37474F;
+    --text-light: #78909C;
+    --card-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
+    --transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    --success-color: #00C853;
+    --warning-color: #FFAB00;
+    --danger-color: #FF5252;
+}
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-        }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+}
 
-        @supports (font-variation-settings: normal) {
-            * { font-family: 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif; }
-        }
+@supports (font-variation-settings: normal) {
+    * { font-family: 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif; }
+}
 
-        body {
-            background-color: #FAFAFA;
-            color: var(--text-color);
-            line-height: 1.6;
-            -webkit-font-smoothing: antialiased;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            padding: 20px;
-        }
+body {
+    background-image: url('https://images.pexels.com/photos/1640777/pexels-photo-1640777.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    color: var(--text-color);
+    line-height: 1.6;
+    -webkit-font-smoothing: antialiased;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 20px;
+}
 
-        .auth-container {
-            width: 100%;
-            max-width: 420px;
-        }
+/* Add a semi-transparent overlay to improve text readability */
+body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
 
-        .auth-card {
-            background: white;
-            border-radius: 16px;
-            padding: 40px;
-            box-shadow: var(--card-shadow);
-            text-align: center;
-            transition: var(--transition);
-        }
+.auth-container {
+    width: 100%;
+    max-width: 420px;
+}
 
-        .auth-card:hover {
-            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
-        }
+.auth-card {
+    border-radius: 16px;
+    padding: 40px;
+    box-shadow: var(--card-shadow);
+    text-align: center;
+    transition: var(--transition);
+    backdrop-filter: blur(6px);
+    background-color: rgba(255, 255, 255, 0.886);
+}
 
-        .logo {
-            color: var(--primary-color);
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-        }
+.auth-card:hover {
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
+}
 
-        .auth-title {
-            font-size: 1.8rem;
-            margin-bottom: 10px;
-            color: var(--dark-color);
-            font-weight: 700;
-        }
+.logo {
+    color: var(--primary-color);
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+}
 
-        .auth-subtitle {
-            color: var(--text-light);
-            margin-bottom: 30px;
-            font-size: 1rem;
-        }
+.auth-title {
+    font-size: 1.8rem;
+    margin-bottom: 10px;
+    color: var(--dark-color);
+    font-weight: 700;
+}
 
-        .auth-form {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
+.auth-subtitle {
+    color: var(--text-light);
+    margin-bottom: 30px;
+    font-size: 1rem;
+}
 
-        .form-group {
-            position: relative;
-            text-align: left;
-        }
+.auth-form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
 
-        .form-group label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: 600;
-            color: var(--text-color);
-        }
+.form-group {
+    position: relative;
+    text-align: left;
+}
+.form-group input {
+    width: 100%;
+    padding: 14px 20px;
+    border: 2px solid #546269;
+    border-radius: 10px;
+    font-size: 1rem;
+    transition: var(--transition);
+    background-color: rgba(255, 255, 255, 0.8);
+}
 
-        .form-control {
-            width: 100%;
-            padding: 14px 20px;
-            border: 2px solid #E0E0E0;
-            border-radius: 10px;
-            font-size: 1rem;
-            transition: var(--transition);
-        }
+.form-group label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: 600;
+    color: var(--text-color);
+}
 
-        .form-control:focus {
-            outline: none;
-            border-color: var(--primary-color);
-            box-shadow: 0 0 0 3px rgba(0, 200, 83, 0.2);
-        }
+.form-control {
+    width: 100%;
+    padding: 14px 20px;
+    border: 2px solid #E0E0E0;
+    border-radius: 10px;
+    font-size: 1rem;
+    transition: var(--transition);
+    background-color: rgba(255, 255, 255, 0.8);
+}
 
-        .password-toggle {
-            position: absolute;
-            right: 15px;
-            top: 40px;
-            cursor: pointer;
-            color: var(--text-light);
-        }
+.form-control:focus {
+    outline: none;
+    border-color: var(--primary-color);
+    box-shadow: 0 0 0 3px rgba(0, 200, 83, 0.2);
+    background-color: white;
+}
 
-        .auth-btn {
-            width: 100%;
-            padding: 14px;
-            background: linear-gradient(to right, var(--primary-color), var(--primary-light));
-            color: white;
-            border: none;
-            border-radius: 10px;
-            font-size: 1rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: var(--transition);
-            box-shadow: 0 4px 12px rgba(0, 200, 83, 0.3);
-            margin-top: 10px;
-        }
+.password-toggle {
+    position: absolute;
+    right: 15px;
+    top: 40px;
+    cursor: pointer;
+    color: var(--text-light);
+}
 
-        .auth-btn:hover {
-            background: linear-gradient(to right, var(--primary-dark), var(--primary-color));
-            transform: translateY(-2px);
-            box-shadow: 0 6px 16px rgba(0, 200, 83, 0.4);
-        }
+.auth-btn {
+    width: 100%;
+    padding: 14px;
+    background: linear-gradient(to right, var(--primary-color), var(--primary-light));
+    color: white;
+    border: none;
+    border-radius: 10px;
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: var(--transition);
+    box-shadow: 0 4px 12px rgba(0, 200, 83, 0.3);
+    margin-top: 10px;
+}
 
-        .auth-switch {
-            margin-top: 25px;
-            color: var(--text-light);
-        }
+.auth-btn:hover {
+    background: linear-gradient(to right, var(--primary-dark), var(--primary-color));
+    transform: translateY(-2px);
+    box-shadow: 0 6px 16px rgba(0, 200, 83, 0.4);
+}
 
-        .auth-switch a {
-            color: var(--primary-color);
-            text-decoration: none;
-            font-weight: 600;
-            transition: var(--transition);
-        }
+.auth-switch {
+    margin-top: 25px;
+    color: var(--text-light);
+}
 
-        .auth-switch a:hover {
-            color: var(--primary-dark);
-        }
+.auth-switch a {
+    color: var(--primary-color);
+    text-decoration: none;
+    font-weight: 600;
+    transition: var(--transition);
+}
 
-        .error-message {
-            color: var(--danger-color);
-            margin-top: 5px;
-            font-size: 0.9rem;
-            text-align: left;
-            display: none;
-        }
+.auth-switch a:hover {
+    color: var(--primary-dark);
+}
 
-        .success-message {
-            color: var(--success-color);
-            margin-bottom: 20px;
-            font-size: 0.9rem;
-            display: none;
-            opacity: 0;
-            transform: translateY(10px);
-            transition: all 0.4s ease-out;
-        }
+.error-message {
+    color: var(--danger-color);
+    margin-top: 5px;
+    font-size: 0.9rem;
+    text-align: left;
+    display: none;
+}
 
-        .success-message.show {
-            display: block;
-            opacity: 1;
-            transform: translateY(0);
-        }
+.success-message {
+    color: var(--success-color);
+    margin-bottom: 20px;
+    font-size: 0.9rem;
+    display: none;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: all 0.4s ease-out;
+}
 
-        .progress-container {
-            width: 100%;
-            height: 4px;
-            background-color: #f0f0f0;
-            border-radius: 2px;
-            margin-top: 10px;
-            overflow: hidden;
-        }
+.success-message.show {
+    display: block;
+    opacity: 1;
+    transform: translateY(0);
+}
 
-        .progress-bar {
-            height: 100%;
-            width: 0;
-            background-color: var(--primary-light);
-            border-radius: 2px;
-            transition: width 1.5s ease-out;
-        }
+.progress-bar {
+    height: 4px;
+    width: 0;
+    background-color: var(--primary-light);
+    border-radius: 2px;
+    margin-top: 10px;
+    transition: width 1.5s linear;
+}
 
-        @media (max-width: 480px) {
-            .auth-card {
-                padding: 30px 20px;
-            }
-            
-            .auth-title {
-                font-size: 1.5rem;
-            }
-        }
+.progress-bar.active {
+    width: 100%;
+}
+
+/* Responsive */
+@media (max-width: 480px) {
+    .auth-card {
+        padding: 30px 20px;
+    }
+    
+    .auth-title {
+        font-size: 1.5rem;
+    }
+}
     </style>
 </head>
 <body>
