--- a/profile.html
+++ b/profile.html
@@ -699,6 +699,10 @@
     </div>
 
     <script>
+        token = localStorage.getItem('nutritrack_token');
+        if (!token) {
+            window.location.href = '/index.html';
+        }
         document.addEventListener('DOMContentLoaded', function() {
             // Load header
             fetch('header.html')
