--- a/header.html
+++ b/header.html
@@ -259,9 +259,9 @@
                 
                 <nav class="main-nav">
                     <ul class="nav-list">
-                        <li><a href="/foods.html" class="nav-link"><i class="fas fa-utensils"></i> Foods</a></li>
-                        <li><a href="/meals.html" class="nav-link"><i class="fas fa-utensils"></i> Meals</a></li>
-                        <li><a href="/profile.html" class="nav-link"><i class="fas fa-user"></i> Profile</a></li>
+                        <li><a href="/foods.html" class="nav-link"><i class="fas fa-utensils"></i>All Foods</a></li>
+                        <li><a href="/meals.html" class="nav-link"><i class="fas fa-utensils"></i>My Meals</a></li>
+                        <li><a href="/profile.html" class="nav-link"><i class="fas fa-user"></i>My Profile</a></li>
                         <li><button id="logoutBtn" class="nav-link logout"><i class="fas fa-sign-out-alt"></i> Logout</button></li>
                     </ul>
                 </nav>
