--- a/foods.html
+++ b/foods.html
@@ -711,7 +711,7 @@
 <body>
 
     <div id="header-placeholder"></div>
-
+    
     <script>
         // Enhanced token check with error handling
         document.addEventListener('DOMContentLoaded', () => {
@@ -1087,5 +1087,16 @@
             foodManager = new FoodManager();
         });
     </script>
+    <div id="footer-placeholder"></div>
+
+        <script>
+        // Chargement dynamique du footer
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(html => {
+            document.getElementById('footer-placeholder').innerHTML = html;
+            })
+            .catch(err => console.error('Erreur de chargement du footer:', err));
+        </script>
 </body>
 </html>
