--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
     <title>My Profile | NutriTrack</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap">
+    <link rel="icon" type="image/png" href="healthy.png">
     <style>
         :root {
             --primary-color: #10B981;
