--- a/header.html
+++ b/header.html
@@ -260,6 +260,7 @@
                 <nav class="main-nav">
                     <ul class="nav-list">
                         <li><a href="/foods.html" class="nav-link"><i class="fas fa-utensils"></i>All Foods</a></li>
+                        <li><a href="/calories-tracker.html" class="nav-link"><i class="fas fa-chart-line"></i>Calories Tracker</a></li>
                         <li><a href="/meals.html" class="nav-link"><i class="fas fa-utensils"></i>My Meals</a></li>
                         <li><a href="/profile.html" class="nav-link"><i class="fas fa-user"></i>My Profile</a></li>
                         <li><button id="logoutBtn" class="nav-link logout"><i class="fas fa-sign-out-alt"></i> Logout</button></li>
