--- a/calories-tracker.html
+++ b/calories-tracker.html
@@ -344,9 +344,7 @@
         }
 
         @media (max-width: 768px) {
-            body {
-                padding: var(--spacing-sm);
-            }
+
             .container {
                 padding: var(--spacing-sm);
             }
@@ -384,6 +382,9 @@
         }
 
         @media (max-width: 480px) {
+            .body{
+                padding:0;
+            }
             .summary-card .summary-value {
                 font-size: 32px;
             }
